Rename blog slug from vim to cape, add subheader styling, and prevent navigation wrapping

--- a/app/global.css
+++ b/app/global.css
@@ -92,11 +92,11 @@ html {
 }
 
 .prose h2 {
-  @apply text-xl font-medium tracking-tight mt-6 mb-2;
+  @apply text-xl font-medium tracking-tight mt-10 mb-2;
 }
 
 .prose h3 {
-  @apply text-xl font-medium tracking-tight mt-6 mb-2;
+  @apply text-xl font-medium tracking-tight mt-8 mb-2;
 }
 
 .prose h4 {
